<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="reset_password">Reset password</string>
    <string name="not_a_valid_username">Not a valid username</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">change password</string>
    <string name="account_deletion">Account Deletion</string>
    <string name="you_do_not_have_an_account_yet">You don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="option_sign_in">Sign in!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">Username</string>
    <string name="change_image">change image</string>
    <string name="artistic_endeavors" translatable="false">Artistic Endeavors</string>
    <string name="account_activity" translatable="false">AccountActivity</string>
    <string name="profile">PROFILE</string>
    <string name="account">ACCOUNT</string>
    <string name="go_to_main_activity">Go to MainActivity</string>
    <string name="profile_activity" translatable="false">ProfileActivity</string>
    <string name="rv_item">rv_item</string>
    <string name="description_ellipsis">Description…</string>
    <string name="post_image">post image</string>
    <string name="add">Add</string>
    <string name="please_enter_post_description">Please enter post description</string>
    <string name="post_photo">Post photo</string>
    <string name="unfortunately_there_are_currently_no_posts_to_display">Unfortunately, there are currently no posts to display :(</string>
    <string name="delete_post">Delete post</string>
    <string name="uploading_image_please_be_patient">Uploading image, please be patient</string>
    <string name="edit_post">Edit post</string>
    <string name="zoomed_in">zoomed in</string>
    <string name="profile_image">Profile Image</string>
    <string name="account_security">Account Security</string>
    <string name="close">Close</string>
    <string name="full_size_image">full size image</string>
    <string name="delete_account">delete account</string>
    <string name="resend_confirmation_email">Resend confirmation email</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="error_downloading_image">Error downloading image: %s</string>
    <string name="failed_to_delete_profile_image">Failed to delete profile image: %s</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="confirm_account_deletion">Confirm Account Deletion</string>
    <string name="delete">Delete</string>
    <string name="account_deleted_successfully">Account deleted successfully.</string>
    <string name="incorrect_password_account_deletion_cancelled">Incorrect password. Account deletion cancelled.</string>
    <string name="cancel">Cancel</string>
    <string name="you_logged_out_successfully">You logged out successfully.</string>
    <string name="image_uploaded_successfully">Image uploaded successfully: %s</string>
    <string name="image_upload_failed">"Image upload failed:" %s</string>
    <string name="password_must_be_at_least_eight_characters_long">Password must be at least eight characters long.</string>
    <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter.</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter.</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit.</string>
    <string name="password_must_contain_at_least_one_special_character">Password must contain at least one special character.</string>
    <string name="confirm_password_change">Confirm Password Change</string>
    <string name="change">CHANGE</string>
    <string name="please_enter_the_current_password_to_confirm_password_change">Please enter the current password to confirm password change.</string>
    <string name="current_password_cant_be_same_as_the_new_password">Current password can\'t be same as the new password.</string>
    <string name="password_updated_successfully">Password updated successfully.</string>
    <string name="failed_to_update_the_password_please_try_again">Failed to update the password. Please try again.</string>
    <string name="new_password_must_satisfy_the_criteria">New password must satisfy the criteria.</string>
    <string name="incorrect_current_password_please_try_again">Incorrect current password. Please try again.</string>
    <string name="username_must_be_eight_to_twenty_characters_long">Username must be eight to twenty characters long.</string>
    <string name="username_can_only_contain_lowercase_letters_digits_underscores_and_dots">Username can only contain lowercase letters, digits, underscores and dots.</string>
    <string name="username_cannot_start_with_underscore_or_dot">Username cannot start with underscore or dot.</string>
    <string name="username_cannot_end_with_underscore_or_dot">Username cannot end with underscore or dot.</string>
    <string name="username_cannot_have_multiple_underscores_or_dots_in_a_row">Username cannot have multiple underscores or dots in a row.</string>
    <string name="username_cannot_have_underscore_next_to_dot">Username cannot have underscore next to dot.</string>
    <string name="invalid_email_format">Invalid email format.</string>
    <string name="error_loading_user_data">Error loading user data: %s</string>
    <string name="confirm_post_deletion">Confirm Post Deletion</string>
    <string name="image_deleted_successfully">Image deleted successfully.</string>
    <string name="error_deleting_image">Error deleting image. %s</string>
    <string name="post_deleted_successfully">Post deleted successfully.</string>
    <string name="error_deleting_post">Error deleting post. %s</string>
    <string name="save">Save</string>
    <string name="error_updating_post_description">Error updating post description %s</string>
    <string name="main_activity" translatable="false">MainActivity</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="login_activity" translatable="false">LoginActivity</string>
    <string name="verification_email_sent_successfully">Verification email sent successfully.</string>
    <string name="failed_to_send_verification_email">Failed to send verification email.</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="you_logged_in_successfully">"You logged in successfully."</string>
    <string name="please_verify_your_email_address">Please verify your email address.</string>
    <string name="new_post_description">New Post Description</string>
    <string name="post">Post</string>
    <string name="document_snapshot_written_with_id">DocumentSnapshot written with ID: %s</string>
    <string name="error_updating_document">Error updating document: %s</string>
    <string name="error_adding_document">Error adding document: %s</string>
    <string name="error_getting_download_url">Error getting download URL %s</string>
    <string name="error_getting_user_data">Error getting user data %s</string>
    <string name="error_updating_user_data">Error updating user data %s</string>
    <string name="bio_updated_successfully">Bio updated successfully!</string>
    <string name="this_username_is_already_taken">"This username is already taken."</string>
    <string name="please_enter_the_current_password_to_confirm_account_deletion">Please enter the current password to confirm account deletion.</string>
    <string name="verification_email_has_been_sent_to_your_inbox_please_verify_your_email_before_logging_in">Verification email has been sent to your inbox. Please verify your email before logging in.</string>
    <string name="send">Send</string>
    <string name="re_upload_functionality">Re - upload functionality</string>
    <string name="enter_post_description">Enter post description…</string>
    <string name="upload">Upload</string>
    <string name="update_biography">Update biography…</string>
    <string name="update_bio">update bio</string>
    <string name="biography">Biography</string>
    <string name="user_profile_activity" translatable="false">UserProfileActivity</string>
    <string name="choose_post_category">Choose post category:</string>
    <string name="category">Category</string>

    <string-array name="category_array">
        <item>Offering art service</item>
        <item>Selling artwork</item>
        <item>Promoting gallery</item>
        <item>Promoting exhibition</item>
    </string-array>
</resources>