<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal_200"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/home_option"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@mipmap/ic_home"
            android:contentDescription="@string/go_to_main_activity" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/profile_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/account_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/action_sign_out"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:background="@mipmap/ic_logout"
            android:contentDescription="@string/log_out" />

    </LinearLayout>

</androidx.appcompat.widget.Toolbar>