<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activities.ProfileActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/home_option"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/go_to_main_activity"
            app:layout_constraintBottom_toBottomOf="@+id/profile_toolbar"
            app:layout_constraintEnd_toStartOf="@+id/profile_option"
            app:layout_constraintTop_toTopOf="@+id/profile_toolbar"
            app:srcCompat="@mipmap/ic_home" />

        <TextView
            android:id="@+id/profile_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_toolbar"
            app:layout_constraintEnd_toStartOf="@+id/account_option"
            app:layout_constraintTop_toTopOf="@+id/profile_toolbar" />

        <TextView
            android:id="@+id/account_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_toolbar"
            app:layout_constraintEnd_toStartOf="@+id/action_sign_out"
            app:layout_constraintTop_toTopOf="@+id/profile_toolbar" />

        <ImageView
            android:id="@+id/action_sign_out"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/log_out"
            app:layout_constraintBottom_toBottomOf="@+id/profile_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/profile_toolbar"
            app:layout_constraintTop_toTopOf="@+id/profile_toolbar"
            app:srcCompat="@mipmap/ic_logout" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar">

            <ImageView
                android:id="@+id/profpic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@mipmap/ic_profile_picture"
                android:contentDescription="@string/profile_image"
                android:visibility="visible" />

            <TextView
                android:id="@+id/usern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/profpic"
                android:text="@string/username"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:visibility="visible" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPosts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="550dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:tint="@android:color/white"
            app:backgroundTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
            app:srcCompat="@android:drawable/ic_input_add" />

        <RelativeLayout
            android:id="@+id/progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/ic_profile_picture_background"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/loading_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/uploading_image_please_be_patient"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loading_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/noPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/unfortunately_there_are_currently_no_posts_to_display"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>