<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- activity_add_post.xml -->
    <LinearLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="?android:attr/colorBackground">

        <!-- ImageView for displaying the selected image -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:elevation="6dp"
            app:srcCompat="@mipmap/ic_add"
            android:contentDescription="@string/post_image" />

        <!-- EditText for entering the post text -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_post_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Buttons layout -->
        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <!-- Cancel button -->
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="6dp"
                android:text="@string/cancel"
                android:background="@drawable/custom_button"
                android:textColor="@color/teal_700"
                app:backgroundTint="@color/teal_200"
                style="?android:attr/buttonBarButtonStyle" />

            <!-- Send button -->
            <Button
                android:id="@+id/sendButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:text="@string/upload"
                android:background="@drawable/custom_button"
                android:textColor="@color/teal_700"
                app:backgroundTint="@color/teal_200"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>