<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activities.ProfileActivity">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@mipmap/ic_profile_picture"
                android:contentDescription="@string/profile_image"
                android:visibility="visible" />

            <TextView
                android:id="@+id/usern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/username"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                android:visibility="visible" />

            <TextView
                android:id="@+id/biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:layout_marginTop="18dp"
                android:text="@string/update_biography" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/biography"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/usern"
                android:background="@drawable/custom_button"
                android:enabled="true"
                android:text="@string/close"
                android:textColor="@color/teal_700"
                app:backgroundTint="@color/teal_200" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPosts"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:listitem="@layout/main_item_post" />

        <RelativeLayout
            android:id="@+id/progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/ic_profile_picture_background"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/loading_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/uploading_image_please_be_patient"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loading_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/noPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/unfortunately_there_are_currently_no_posts_to_display"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>